# email_newsletters

newsletters/: Cargo.toml  Dockerfile
newsletters/configuration/: base.yaml
newsletters/scripts/: init_db.sh
newsletters/src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
newsletters/src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
newsletters/src/routes/: health_check.rs  subscriptions.rs
newsletters/tests/: health_check.rs
