[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"


[lib]
path = "src/lib.rs"


[[bin]]
path = "src/main.rs"
name = "zero2prod"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
tokio = { version = "1.26.0", features = ["full"] }
reqwest = "0.11"
serde = { version = "1", features = ["derive"]}
sqlx = { version = "0.6.2", default-features = false, features = [ "runtime-actix-rustls", 
"macros",
"postgres",
"uuid",
"chrono",
"migrate" ] }
config = "0.11"
chrono = "0.4.15"
log = "0.4.0"
env_logger = "0.9.0"

[dependencies.uuid]
version = "1.3.0"
features = [
    "v4",                # Lets you generate random UUIDs
]

